examples/appmesh/cluster/v1beta1/virtualservice.yaml
# SPDX-FileCopyrightText: 2024 The Crossplane Authors <https://crossplane.io>
#
# SPDX-License-Identifier: CC0-1.0

apiVersion: appmesh.aws.upbound.io/v1beta1
kind: VirtualService
metadata:
  annotations:
    meta.upbound.io/example-id: appmesh/v1beta1/virtualservice
  labels:
    testing.upbound.io/example-name: servicea
  name: servicea
spec:
  forProvider:
    meshNameSelector:
      matchLabels:
        testing.upbound.io/example-name: simple
    name: servicea.simpleapp.local
    region: us-west-1
    spec:
    - provider:
      - virtualNode:
        - virtualNodeNameSelector:
            matchLabels:
              testing.upbound.io/example-name: serviceb1
